Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-139345

setWindowIcon(QIcon()) on QMdiSubWindow resets to the default icon instead of removing the icon

XMLWordPrintable

    • macOS
    • 4fa514911 (dev), f9770fe09 (6.10)

      When a QMdiSubWindow is given a custom title‑bar icon via setWindowIcon(const QIcon &), there is currently no way to remove that icon again. Calling setWindowIcon(QIcon()) (or setWindowIcon({})) does not clear the icon; instead, the subwindow shows the application icon. This makes it impossible to display a title bar without any icon once one has been set. 

      Same thing works if child windows is tabbified. 

      Attached example demonstrate this, when you run, It will display a MainWindow with a QMdiArea in subwindow mode with icons.
      There is a toolbar with two actions. The first will toggle between tabbed/subwindow modes. The second will set the icons, and attempt to clear them.

      If you are in tabbed mode, the icon action will show and hide the icons that appear in the tab.

      If you are in subwindow mode, the icon action will not clear the icon that appears in the subwindow's title bar.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vgt Eirik Aavitsland
            irfan.omair@digia.com Irfan Omair
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes